Testing two variants of getting comments from java files